<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SliderSynth</string>
    <string name="waveform_sine">Sine</string>
    <string name="waveform_square">Square</string>
    <string name="waveform_triangle">Triangle</string>
    <string name="waveform_sawtooth">Sawtooth</string>
    <string name="waveform_reversesawtooth">Reverse sawtooth</string>
    <string name="waveform_sine_value">SINE</string>
    <string name="waveform_square_value">SQUARE</string>
    <string name="waveform_triangle_value">TRIANGLE</string>
    <string name="waveform_sawtooth_value">SAWTOOTH</string>
    <string name="waveform_reversesawtooth_value">REVERSE_SAWTOOTH</string>
    <string name="mainmenu_settings">Settings</string>
    <string name="mainmenu_about">About</string>
    <string name="aboutCredits">Thanks to the following people\nfor sharing their code:
	    \ncode.google.com/p/mobilesynth
	    \nrobobunny.com</string>
    <string name="preferences_about">About</string>
    <string name="preferences_general">General</string>
    <string name="preferences_redkeyboard">Red board</string>
    <string name="preferences_greenkeyboard">Green board</string>
    <string name="preferences_bluekeyboard">Blue board</string>
    <string name="preferences_yellowkeyboard">Yellow board</string>
    <string name="preferences_samplerate_summary">Lower sample rates put less strain on the cpu but\nthey don\'t allow to play higher frequencies that will result silent</string>
    <string name="preferences_samplerate_title">Sample rate (Hz)</string>
    <string name="preferences_numberofkeyboards_summary">Number of boards visible on the screen:</string>
    <string name="preferences_numberofkeyboards_title">Number of boards</string>
    <string name="preferences_waveform_title">Waveform</string>
    <string name="preferences_octaves_title">Octaves</string>
    <string name="preferences_octaves_summary">Number of octaves on the board:</string>
    <string name="preferences_firstoctave_title">First octave</string>
    <string name="preferences_firstoctave_summary">First octave on the board:</string>
    <string name="preferences_attack_title">Attack</string>
    <string name="preferences_attack_summary">Attack duration (ms)</string>
    <string name="preferences_release_title">Release</string>
    <string name="preferences_release_summary">Release duration (ms)</string>
    <string name="preferences_maxvolume_title">Volume</string>
    <string name="preferences_maxvolume_summary">A too high volume may cause distortion when many sounds are playing at the same time</string>
    <string name="preferences_dynamicbackground_title">Colorful background</string>
    <string name="preferences_dynamicbackground_summary">Change the background color during play</string>
    <string name="preferences_analytics_title">Enable Google Analytics</string>
    <string name="preferences_analytics_summary">Send anonyomous usage statistics to the developers.</string>
    <string name="preferences_buffersize_title">Buffer size (ms)</string>
    <string name="preferences_buffersize_summary">Higher values may reduce playback problems but cause a slight delay between the touch and the start of the sound.</string>
    <string name="title_activity_slider_synth">Slider Synth</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="preferences_showsemitoneslines_title">Semitones lines</string>
    <string name="preferences_showsemitoneslines_summary">Show lines corresponding to semitones</string>
    <string name="preferences_showsemitonesnames_title">Semitones names</string>
    <string name="preferences_showsemitonesnames_summary">Show semitones names</string>
    <string name="echo_delay">Echo delay (ms)</string>
    <string name="echo_delay_summary">Delay between the sound and its subsequent echoes</string>
    <string name="echo_decay">Echo decay</string>
    <string name="echo_decay_summary">Echo decay at every echo. 100=No decay, 0=total decay.</string>
    <string name="action_about">About</string>
    <string name="enable_echo_effect">Enable echo effect</string>
    <string name="echo">Echo</string>
    <string name="general">General</string>
    <string name="color_effect_none">None</string>
    <string name="color_effect_soft_rainbow">Soft rainbow</string>
    <string name="color_effect_hard_rainbow">Hard rainbow</string>
    <string name="color_effect_none_value">NONE</string>
    <string name="color_effect_soft_rainbow_value">SOFT_RAINBOW</string>
    <string name="color_effect_hard_rainbow_value">HARD_RAINBOW</string>
    <string name="preferences_showcurrentnotes_summary">Show lines corresponding to the currently played notes</string>
    <string name="preferences_showcurrentnotes_title">Show current notes</string>
</resources>