<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/general">
        <!--ListPreference
            android:defaultValue="44100"
            android:entries="@array/samplerate"
            android:entryValues="@array/samplerate"
            android:key="samplerate"
            android:summary="@string/preferences_samplerate_summary"
            android:title="@string/preferences_samplerate_title" /-->
        <ListPreference
            android:defaultValue="2"
            android:entries="@array/numberofkeyboards"
            android:entryValues="@array/numberofkeyboards"
            android:key="numberofkeyboards"
            android:summary="@string/preferences_numberofkeyboards_summary"
            android:title="@string/preferences_numberofkeyboards_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="showsemitoneslines"
            android:summary="@string/preferences_showsemitoneslines_summary"
            android:title="@string/preferences_showsemitoneslines_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="showsemitonesnames"
            android:summary="@string/preferences_showsemitonesnames_summary"
            android:title="@string/preferences_showsemitonesnames_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="showcurrentnotes"
            android:summary="@string/preferences_showcurrentnotes_summary"
            android:title="@string/preferences_showcurrentnotes_title" />
        <ListPreference
            android:defaultValue="NONE"
            android:entries="@array/coloreffects"
            android:entryValues="@array/coloreffects_values"
            android:key="coloreffect"
            android:title="Color effect"
            android:summary="Color effect used to paint the boards when touched" />
        <PreferenceScreen
            android:key="keyboard1"
            android:title="@string/preferences_redkeyboard"
            android:persistent="true">
            <PreferenceCategory android:title="@string/preferences_redkeyboard">
                <ListPreference
                    android:defaultValue="@string/waveform_sine_value"
                    android:entries="@array/waveforms"
                    android:entryValues="@array/waveforms_values"
                    android:key="waveform1"
                    android:summary=""
                    android:title="@string/preferences_waveform_title" />
                <ListPreference
                    android:defaultValue="2"
                    android:entries="@array/octavesperkeyboard"
                    android:entryValues="@array/octavesperkeyboard"
                    android:key="octavesperkeyboard1"
                    android:summary="@string/preferences_octaves_summary"
                    android:title="@string/preferences_octaves_title" />
                <ListPreference
                    android:defaultValue="5"
                    android:entries="@array/firstoctave"
                    android:entryValues="@array/firstoctave"
                    android:key="firstoctave1"
                    android:summary="@string/preferences_firstoctave_summary"
                    android:title="@string/preferences_firstoctave_title" />
                <eu.flatworld.android.slider.SeekBarPreference
                    android:defaultValue="50"
                    android:key="attack1"
                    android:max="5000"
                    android:summary="@string/preferences_attack_summary"
                    android:title="@string/preferences_attack_title" />
                <eu.flatworld.android.slider.SeekBarPreference
                    android:defaultValue="1000"
                    android:key="release1"
                    android:max="5000"
                    android:summary="@string/preferences_release_summary"
                    android:title="@string/preferences_release_title" />
                <CheckBoxPreference
                    android:defaultValue="true"
                    android:key="echoenabled1"
                    android:summary="@string/enable_echo_effect"
                    android:title="@string/echo" />
                <eu.flatworld.android.slider.SeekBarPreference
                    android:defaultValue="500"
                    android:key="echodelay1"
                    android:max="5000"
                    android:summary="@string/echo_delay_summary"
                    android:title="@string/echo_delay" />
                <eu.flatworld.android.slider.SeekBarPreference
                    android:defaultValue="50"
                    android:key="echodecay1"
                    android:max="100"
                    android:summary="@string/echo_decay_summary"
                    android:title="@string/echo_decay" />
                <eu.flatworld.android.slider.SeekBarPreference
                    android:defaultValue="20"
                    android:key="maxvol1"
                    android:max="100"
                    android:summary="@string/preferences_maxvolume_summary"
                    android:title="@string/preferences_maxvolume_title" />
            </PreferenceCategory>
        </PreferenceScreen>
        <PreferenceScreen
            android:key="keyboard2"
            android:title="@string/preferences_greenkeyboard">
            <PreferenceCategory android:title="@string/preferences_greenkeyboard">
                <ListPreference
                    android:defaultValue="@string/waveform_sine_value"
                    android:entries="@array/waveforms"
                    android:entryValues="@array/waveforms_values"
                    android:key="waveform2"
                    android:summary=""
                    android:title="@string/preferences_waveform_title" />
                <ListPreference
                    android:defaultValue="2"
                    android:entries="@array/octavesperkeyboard"
                    android:entryValues="@array/octavesperkeyboard"
                    android:key="octavesperkeyboard2"
                    android:summary="@string/preferences_octaves_summary"
                    android:title="@string/preferences_octaves_title" />
                <ListPreference
                    android:defaultValue="4"
                    android:entries="@array/firstoctave"
                    android:entryValues="@array/firstoctave"
                    android:key="firstoctave2"
                    android:summary="@string/preferences_firstoctave_summary"
                    android:title="@string/preferences_firstoctave_title" />
                <eu.flatworld.android.slider.SeekBarPreference
                    android:defaultValue="50"
                    android:key="attack2"
                    android:max="5000"
                    android:summary="@string/preferences_attack_summary"
                    android:title="@string/preferences_attack_title" />
                <eu.flatworld.android.slider.SeekBarPreference
                    android:defaultValue="500"
                    android:key="release2"
                    android:max="5000"
                    android:summary="@string/preferences_release_summary"
                    android:title="@string/preferences_release_title" />
                <CheckBoxPreference
                    android:defaultValue="true"
                    android:key="echoenabled2"
                    android:summary="@string/enable_echo_effect"
                    android:title="@string/echo" />
                <eu.flatworld.android.slider.SeekBarPreference
                    android:defaultValue="500"
                    android:key="echodelay2"
                    android:max="5000"
                    android:summary="@string/echo_delay_summary"
                    android:title="@string/echo_delay" />
                <eu.flatworld.android.slider.SeekBarPreference
                    android:defaultValue="50"
                    android:key="echodecay2"
                    android:max="100"
                    android:summary="@string/echo_decay_summary"
                    android:title="@string/echo_decay" />
                <eu.flatworld.android.slider.SeekBarPreference
                    android:defaultValue="20"
                    android:key="maxvol2"
                    android:max="100"
                    android:summary="@string/preferences_maxvolume_summary"
                    android:title="@string/preferences_maxvolume_title" />
            </PreferenceCategory>
        </PreferenceScreen>
        <PreferenceScreen
            android:key="keyboard3"
            android:title="@string/preferences_bluekeyboard">
            <PreferenceCategory android:title="@string/preferences_bluekeyboard">
                <ListPreference
                    android:defaultValue="@string/waveform_square_value"
                    android:entries="@array/waveforms"
                    android:entryValues="@array/waveforms_values"
                    android:key="waveform3"
                    android:summary=""
                    android:title="@string/preferences_waveform_title" />
                <ListPreference
                    android:defaultValue="2"
                    android:entries="@array/octavesperkeyboard"
                    android:entryValues="@array/octavesperkeyboard"
                    android:key="octavesperkeyboard3"
                    android:summary="@string/preferences_octaves_summary"
                    android:title="@string/preferences_octaves_title" />
                <ListPreference
                    android:defaultValue="2"
                    android:entries="@array/firstoctave"
                    android:entryValues="@array/firstoctave"
                    android:key="firstoctave3"
                    android:summary="@string/preferences_firstoctave_summary"
                    android:title="@string/preferences_firstoctave_title" />
                <eu.flatworld.android.slider.SeekBarPreference
                    android:defaultValue="50"
                    android:key="attack3"
                    android:max="5000"
                    android:summary="@string/preferences_attack_summary"
                    android:title="@string/preferences_attack_title" />
                <eu.flatworld.android.slider.SeekBarPreference
                    android:defaultValue="250"
                    android:key="release3"
                    android:max="5000"
                    android:summary="@string/preferences_release_summary"
                    android:title="@string/preferences_release_title" />
                <CheckBoxPreference
                    android:defaultValue="true"
                    android:key="echoenabled3"
                    android:summary="@string/enable_echo_effect"
                    android:title="@string/echo" />
                <eu.flatworld.android.slider.SeekBarPreference
                    android:defaultValue="500"
                    android:key="echodelay3"
                    android:max="5000"
                    android:summary="@string/echo_delay_summary"
                    android:title="@string/echo_delay" />
                <eu.flatworld.android.slider.SeekBarPreference
                    android:defaultValue="50"
                    android:key="echodecay3"
                    android:max="100"
                    android:summary="@string/echo_decay_summary"
                    android:title="@string/echo_decay" />
                <eu.flatworld.android.slider.SeekBarPreference
                    android:defaultValue="20"
                    android:key="maxvol3"
                    android:max="100"
                    android:summary="@string/preferences_maxvolume_summary"
                    android:title="@string/preferences_maxvolume_title" />
            </PreferenceCategory>
        </PreferenceScreen>
        <PreferenceScreen
            android:key="keyboard4"
            android:title="@string/preferences_yellowkeyboard">
            <PreferenceCategory android:title="@string/preferences_yellowkeyboard">
                <ListPreference
                    android:defaultValue="@string/waveform_triangle_value"
                    android:entries="@array/waveforms"
                    android:entryValues="@array/waveforms_values"
                    android:key="waveform4"
                    android:summary=""
                    android:title="@string/preferences_waveform_title" />
                <ListPreference
                    android:defaultValue="2"
                    android:entries="@array/octavesperkeyboard"
                    android:entryValues="@array/octavesperkeyboard"
                    android:key="octavesperkeyboard4"
                    android:summary="@string/preferences_octaves_summary"
                    android:title="@string/preferences_octaves_title" />
                <ListPreference
                    android:defaultValue="4"
                    android:entries="@array/firstoctave"
                    android:entryValues="@array/firstoctave"
                    android:key="firstoctave4"
                    android:summary="@string/preferences_firstoctave_summary"
                    android:title="@string/preferences_firstoctave_title" />
                <eu.flatworld.android.slider.SeekBarPreference
                    android:defaultValue="50"
                    android:key="attack4"
                    android:max="5000"
                    android:summary="@string/preferences_attack_summary"
                    android:title="@string/preferences_attack_title" />
                <eu.flatworld.android.slider.SeekBarPreference
                    android:defaultValue="50"
                    android:key="release4"
                    android:max="5000"
                    android:summary="@string/preferences_release_summary"
                    android:title="@string/preferences_release_title" />
                <CheckBoxPreference
                    android:defaultValue="true"
                    android:key="echoenabled4"
                    android:summary="@string/enable_echo_effect"
                    android:title="@string/echo" />
                <eu.flatworld.android.slider.SeekBarPreference
                    android:defaultValue="500"
                    android:key="echodelay4"
                    android:max="5000"
                    android:summary="@string/echo_delay_summary"
                    android:title="@string/echo_delay" />
                <eu.flatworld.android.slider.SeekBarPreference
                    android:defaultValue="50"
                    android:key="echodecay4"
                    android:max="100"
                    android:summary="@string/echo_decay_summary"
                    android:title="@string/echo_decay" />
                <eu.flatworld.android.slider.SeekBarPreference
                    android:defaultValue="20"
                    android:key="maxvol4"
                    android:max="100"
                    android:summary="@string/preferences_maxvolume_summary"
                    android:title="@string/preferences_maxvolume_title" />
            </PreferenceCategory>
        </PreferenceScreen>
    </PreferenceCategory>
</PreferenceScreen>